# MuscleModel

./: .gitignore  CMakeLists.txt  CMakeLists_old.txt  README.md
Dependencies/: read_me.txt
Northwestern/: Bullet Call Stack.txt  EVERYTHING_ABOUT_BULLET.pptx  New Microsoft Word Document.docx  ~$modeling_log.pptx
Northwestern/_Literature/: 总结.docx
include/: ExtrinsicMuscle.h  Fiber.h  Follicle.h  Instrumentor.h  IntrinsicMuscle.h  Layer.h  MystacialPad.h  Parameter.h  Simulation.h  Spring.h  Tissue.h  Utility.h  myGeneric6DofMuscleConstraint.h  my_pch.h
matlab/: getEmergenceVectors.m  getIntrinsicSlingMuscleIndex.asv  getIntrinsicSlingMuscleIndex.m  getSpringHexMeshIndex.m
output/: MuscleModel-Runtime.json  MuscleModel-Startup.json  parameter.txt  plot_output.m  test.csv  test_120.csv  test_60.csv  test_output.csv
output/MATLAB/: findConvergence2d.m  plot_follcile_az_el.m  plot_follicle_traj.asv  plot_follicle_traj.m  test.m
output/MATLAB_scripts/: compare_Az_angle.asv  compare_Az_angle.m  compare_fiber_info.asv  compare_fiber_info.m  findConvergence1d.m  getAzElEyenose.m  getFolAzEl.m  make_video.m  plot_fiber_info.m  plot_fiber_length.asv  plot_fiber_length.m  plot_follcile_az_el.m  plot_follicle_traj.m  plot_follicle_traj_reduced.m  plot_hamiltonian.m  processOutput.m  readFollicleAzEl.m  readFollicleTopBot.m  script_az_el_angle.m  script_plot_variables.asv  script_plot_variables.m  script_reduced_variables.m  test.m
output/bundle/: fiber_info.csv  fol_00.csv  fol_01.csv  fol_02.csv  fol_03.csv  fol_04.csv  fol_05.csv  fol_06.csv  fol_07.csv  fol_08.csv  fol_09.csv  fol_10.csv  fol_11.csv  fol_12.csv  fol_13.csv  fol_14.csv  fol_15.csv  fol_16.csv  fol_17.csv  fol_18.csv  fol_19.csv  fol_20.csv  fol_21.csv  fol_22.csv  fol_23.csv  fol_24.csv  fol_25.csv  fol_26.csv  fol_27.csv  fol_28.csv  fol_29.csv  fol_30.csv  parameter.txt
output/bundle_100Hz_500/: fol_00.csv  fol_01.csv  fol_04.csv  fol_05.csv  fol_06.csv  fol_07.csv  fol_08.csv  fol_09.csv  fol_10.csv  fol_13.csv  fol_14.csv  fol_16.csv  fol_18.csv  fol_19.csv  fol_21.csv  fol_22.csv  fol_23.csv  fol_29.csv
output/bundle_100Hz_60/: fol_02.csv  fol_04.csv  fol_05.csv  fol_06.csv  fol_07.csv  fol_08.csv  fol_09.csv  fol_10.csv  fol_12.csv  fol_18.csv  fol_21.csv  fol_24.csv  fol_25.csv  fol_26.csv  fol_28.csv  fol_29.csv  fol_30.csv
output/bundle_100Hz_700/: fiber_info.csv  fol_00.csv  fol_01.csv  fol_02.csv  fol_05.csv  fol_08.csv  fol_09.csv  fol_11.csv  fol_16.csv  fol_17.csv  fol_19.csv  fol_20.csv  fol_21.csv  fol_22.csv  fol_25.csv  fol_27.csv  fol_29.csv  fol_30.csv  parameter.txt
output/bundle_110Hz_100/: fol_00.csv  fol_02.csv  fol_04.csv  fol_06.csv  fol_07.csv  fol_08.csv  fol_11.csv  fol_12.csv  fol_14.csv  fol_15.csv  fol_17.csv  fol_18.csv  fol_22.csv  fol_23.csv  fol_24.csv  fol_25.csv  fol_26.csv  fol_27.csv  fol_28.csv  parameter.txt
output/bundle_110Hz_300/: fiber_info.csv  fol_00.csv  fol_01.csv  fol_03.csv  fol_04.csv  fol_05.csv  fol_08.csv  fol_09.csv  fol_10.csv  fol_12.csv  fol_17.csv  fol_18.csv  fol_21.csv  fol_22.csv  fol_23.csv  fol_24.csv  fol_27.csv  fol_28.csv
output/bundle_110Hz_500/: fol_04.csv  fol_06.csv  fol_07.csv  fol_08.csv  fol_09.csv  fol_10.csv  fol_13.csv  fol_15.csv  fol_16.csv  fol_18.csv  fol_19.csv  fol_22.csv  fol_23.csv  fol_24.csv  fol_25.csv  fol_30.csv
output/bundle_110Hz_60/: fiber_info.csv  fol_00.csv  fol_01.csv  fol_02.csv  fol_04.csv  fol_05.csv  fol_06.csv  fol_07.csv  fol_08.csv  fol_12.csv  fol_13.csv  fol_15.csv  fol_18.csv  fol_19.csv  fol_21.csv  fol_23.csv  fol_24.csv  fol_25.csv  fol_26.csv  fol_27.csv  fol_28.csv  fol_29.csv
output/bundle_110Hz_700/: fol_01.csv  fol_02.csv  fol_03.csv  fol_04.csv  fol_05.csv  fol_06.csv  fol_08.csv  fol_09.csv  fol_11.csv  fol_12.csv  fol_15.csv  fol_17.csv  fol_19.csv  fol_20.csv  fol_21.csv  fol_22.csv  fol_24.csv  fol_26.csv  parameter.txt
output/bundle_110Hz_80/: fol_00.csv  fol_01.csv  fol_06.csv  fol_07.csv  fol_08.csv  fol_09.csv  fol_11.csv  fol_15.csv  fol_16.csv  fol_17.csv  fol_20.csv  fol_23.csv  fol_24.csv  fol_25.csv  fol_27.csv
output/bundle_120Hz_100/: fiber_info.csv  fiber_length.csv  fol_00.csv  fol_01.csv  fol_02.csv  fol_03.csv  fol_04.csv  fol_05.csv  fol_06.csv  fol_07.csv  fol_08.csv  fol_09.csv  fol_10.csv  fol_11.csv  fol_12.csv  (+19 more)
resources/: follicle_pos_ypr.csv  follicle_pos_ypr_len_vol.csv  follicle_pos_ypr_len_vol_fromARP.csv  follicle_pos_ypr_len_vol_fromRatMap.csv  follicle_pos_ypr_len_vol_reduced.csv  follicle_pos_ypr_len_vol_reduced_fromARP.csv  follicle_position_orientation.csv  follicle_position_orientation.mat  intrinsic_sling_muscle_contraction_trajectory.csv  intrinsic_sling_muscle_greek.csv  intrinsic_sling_muscle_greek_reduced.csv  intrinsic_sling_muscle_idx.csv  intrinsic_sling_muscle_idx_reduced.csv  maxillolabialis_construction_idx.csv  maxillolabialis_construction_idx_reduced.csv  maxillolabialis_insertion_idx.csv  maxillolabialis_insertion_idx_reduced.csv  maxillolabialis_node_pos.csv  maxillolabialis_node_pos_reduced.csv  maxilolabialis_insertion_idx.csv  nasolabialis_construction_idx.csv  nasolabialis_construction_idx_reduced.csv  nasolabialis_contraction_trajectory.csv  nasolabialis_insertion_idx.csv  nasolabialis_insertion_idx_reduced.csv  nasolabialis_node_pos.csv  nasolabialis_node_pos_reduced.csv  nasolabialis_superficialis_construction_idx.csv  nasolabialis_superficialis_insertion_idx.csv  nasolabialis_superficialis_node_pos.csv  pars_interna_profunda_insertion_height.csv  pars_interna_profunda_insertion_height_reduced.csv  pars_interna_profunda_node_pos.csv  pars_interna_profunda_node_pos_reduced.csv  pars_maxillaris_construction_idx.csv  pars_maxillaris_insertion_height.csv  pars_maxillaris_insertion_height_reduced.csv  pars_maxillaris_insertion_idx.csv  pars_maxillaris_node_pos.csv  pars_maxillaris_node_pos_reduced.csv  (+23 more)
src/: ExtrinsicMuscle.cpp  Fiber.cpp  Follicle.cpp  IntrinsicMuscle.cpp  Layer.cpp  MystacialPad.cpp  Parameter.cpp  Simulation.cpp  Spring.cpp  Tissue.cpp  Utility.cpp  main.cpp  myGeneric6DofMuscleConstraint.cpp
(+2063 files in other folders)
